# telegram_tictactoe_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
bot/: bot.py
bot/handlers/: __init__.py  basic_cmd.py  cancel.py
bot/handlers/callbacks/: callbacks.py
bot/keyboards/: __init__.py
bot/middlewars/: win.py
bot/states/: user.py
bot/utils/: __init__.py  tools.py
tictactoe_bot/: bot.py
tictactoe_bot/handlers/: callbacks.py  play.py
tictactoe_bot/keyboards/: game.py
tictactoe_bot/middlewares/: __init__.py  win.py
tictactoe_bot/states/: __init__.py
