[tool.poetry]
name = "tictactoe-bot"
version = "0.2"
description = "A simple tic-tac-toe telegram bot"
authors = ["mono245 <matvejotinov804@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tictactoe_bot = "tictactoe_bot.bot:main"
